category table added into Database/SQL_Scripts, category.js and category.ts into src/routes folder, category.rest into request folder

--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -10,6 +10,7 @@ services:
     ports:
       - '${DB_PORT}:3306'
     volumes:
+      - ./Database/SQL_Scripts/000__CreateALLdb.sql:/docker-entrypoint-initdb.d/init.sql
       - mariadb_volume:/var/lib/mysql
 
 volumes:
