--- a/docker-compose-dbbe.yaml
+++ b/docker-compose-dbbe.yaml
@@ -12,6 +12,7 @@ services:
     ports:
       - '${DB_PORT}:3306'
     volumes:
+      - ./Database/SQL_Scripts/000__CreateALLdb.sql:/docker-entrypoint-initdb.d/init.sql
       - mariadb_data:/var/lib/mysql
     networks:
       - db_be_network
